# live-bootcamp-project

./: .drone.yml  .gitignore  .rules  CLAUDE.md  compose.yml
.github/workflows/: prod.yml
app-service/: .dockerignore  Dockerfile
app-service/src/: main.rs
auth-service/: Cargo.toml  Dockerfile  rustfmt.toml
auth-service/.sqlx/: query-7e9d43148daeea91825b795fced99a514c86e84e137a5d54c4db162a853a1789.json  query-c81871268011f1b2438c42bb4ea319f50b7b9a3e4776b010230e0cee8366e5c7.json
auth-service/assets/: app.js
auth-service/docs/: DEADLOCK_POSTMORTEM.md
auth-service/migrations/: 20260216075634_create_users_table.up.sql
auth-service/src/: lib.rs  main.rs  router.rs  sandbox.rs  utils.rs
auth-service/src/domain/: data_stores.rs  email.rs  email_client.rs  error.rs  login_attempt_id.rs  mod.rs  password.rs  two_fa_code.rs  user.rs
auth-service/src/routes/: login.rs  logout.rs  mod.rs  root.rs  signup.rs  verify_2fa.rs  verify_token.rs
auth-service/src/services/: hashmap_two_fa_code_store.rs  hashmap_user_store.rs  hashset_banned_token_store.rs  mock_email_client.rs  mod.rs
auth-service/src/services/data_stores/: hashmap_user_store.rs  hashset_banned_token_store.rs  mod.rs  postgres_user_store.rs  redis_banned_token_store.rs  redis_two_fa_code_store.rs
auth-service/src/utils/: auth.rs  constants.rs  mod.rs  tracing.rs
auth-service/tests/api/: helpers.rs  login.rs  logout.rs  main.rs  root.rs  signup.rs  verify_2fa.rs  verify_token.rs
