[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints.rust]
unsafe_code = "forbid"
unused = { level = "allow", priority = -1 }

[dependencies]
axum = "0.8"
tokio = { version = "1.48", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "cors"] }
reqwest = { version = "0.12", default-features = false, features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
regex = "1.12.2"
async-trait = "0.1.89"
validator = { version = "=0.20.0", features = ["derive"] }
axum-extra = { version = "0.12.5", features = ["cookie"] }
chrono = "0.4.43"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
dotenvy = "0.15.7"
lazy_static = "1.5.0"

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "cookies"] }
serde = { version = "1", features = ["derive"] }
fake = "=4.4.0"
rand = "0.9.2"
quickcheck = "1.0.3"
quickcheck_macros = "1.1"
